more embedded stuff

--- a/presentations/embedded/deck.html
+++ b/presentations/embedded/deck.html
@@ -187,7 +187,35 @@ more resources).
 =======================================================================
 
 ---
-class: center, middle
+class: center, middle, headline
+
+## KISS
+## &nbsp;
+
+---
+class: center, middle, headline
+
+## KISS
+## Design Sprints
+
+---
+class: center, middle, fullscreen-image
+
+![Design sprint](/assets/images/warehouse.gif)
+
+---
+class: center, middle, headline
+
+## KISS
+## Keep It Simple, Stupid
+
+---
+class: center, middle, headline
+
+# Design Sprints
+
+---
+class: center, middle, headline
 
 ![Design sprint](/assets/images/design-sprint.png)
 
@@ -212,7 +240,6 @@ This makes replicating production-like usage of your application extremely
 important.
 
 Show picture of Facebook mobile testing:
-https://mondrian.mashable.com/uploads%252Fcard%252Fimage%252F143488%252Fiphones.jpg%252Ffit-in__1200x9600.jpg?signature=IX_AiPfrRuxCoP5zgDxTHYeEqW0=&source=https%3A%2F%2Fblueprint-api-production.s3.amazonaws.com
 
 "In each rack, above the tangle of cables and phones, sits a camera, recording
 every onscreen movement in case a developer needs to review a specific hiccup."
@@ -229,6 +256,11 @@ Property testing is extremely helpful (main section - 5 minutes)
 class: center, middle
 
 ![](/assets/images/property-testing.jpg)
+
+---
+class: center, middle, fullscreen-image
+
+![](/assets/images/phone_testing.jpg)
 
 ---
 class: center, middle, headline
