more embedded stuff

--- a/presentations/concurrency/deck.html
+++ b/presentations/concurrency/deck.html
@@ -9,10 +9,10 @@ layout: true
 
 ---
 
-class: center, middle
+class: center, middle, headline
 
-# Comparing Common Concurrency Patterns
-## in Elixir and Erlang
+## Comparing Common Concurrency Patterns
+### in Elixir and Erlang
 
 ???
 My name is Devon...
@@ -26,9 +26,9 @@ going to be talking about today. Specifically, we're going to be looking at two
 open source examples of some concurrent computation.
 
 ---
-class: center, middle
+class: center, middle, headline
 
-# Embarrassingly Parallel
+## Embarrassingly Parallel
 
 ---
 class: center, middle
@@ -210,39 +210,6 @@ received by the process because we're receiving things in specific order there.
 class: padding
 
 .center[
-# Distributed Parallel Map
-]
-
-```
-def map(collection, func) do
-  node_stream = `Stream.cycle(Node.list())`
-
-  collection
-  |> Stream.zip(node_stream)
-  |> Stream.map(fn {elem, node} ->
-       async(fn -> func.(elem) end, node)
-     end)
-  |> Enum.map(&await(&1, :infinity))
-end
-```
-
-???
-
-And this is only tangentially related, but I always like showing it because it's
-just so damn cool. Before what we had was an implementation that was using 100%
-of the CPU cycles on our node. But now, what we have here with literally one
-line changed, and only barely so, is a distributed implementation that will use
-100% of the CPU cycles on every node in our cluster. Going from a single machine
-to a distributed map-reduce is just that easy!
-
-This is also where I have to put the disclaimer that handling all the myriad
-failure possiblities with distributed systems is extremely complicated, and that
-this won't reliably work in production. But still, it's cool, right?!
-
----
-class: padding
-
-.center[
 # Distributed Async & Await
 ]
 
@@ -363,6 +330,145 @@ class: padding
 def loop(:async) do
   case wait_for_module(:async) do
     {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+```
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case `wait_for_module(:async)` do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    `{:ok, mod}` ->
+      spawn(fn -> run_module(mod) end)
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      `spawn(fn -> run_module(mod) end)`   # non-blocking
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      `loop(:async)`
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      loop(:async)
+
+    `{:error, :no_more_async_modules}` ->
+      loop(:sync)
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      `loop(:sync)`
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
       spawn(fn -> run_module(mod) end)   # non-blocking
       loop(:async)
 
@@ -374,11 +480,197 @@ end
 def loop(:sync) do
   case wait_for_module(:sync) do
     {:ok, mod} ->
-      run_module(mod)                    # blocking
+      run_module(mod)
       loop(:sync)
 
     {:error, :no_more_modules} ->
       :ok
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+
+def loop(:sync) do
+  case `wait_for_module(:sync)` do
+    {:ok, mod} ->
+      run_module(mod)
+      loop(:sync)
+
+    {:error, :no_more_modules} ->
+      :ok
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+
+def loop(:sync) do
+  case wait_for_module(:sync) do
+    `{:ok, mod}` ->
+      run_module(mod)
+      loop(:sync)
+
+    {:error, :no_more_modules} ->
+      :ok
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+
+def loop(:sync) do
+  case wait_for_module(:sync) do
+    {:ok, mod} ->
+      `run_module(mod)`                   # blocking
+      loop(:sync)
+
+    {:error, :no_more_modules} ->
+      :ok
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+
+def loop(:sync) do
+  case wait_for_module(:sync) do
+    {:ok, mod} ->
+      run_module(mod)                   # blocking
+      `loop(:sync)`
+
+    {:error, :no_more_modules} ->
+      :ok
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+
+def loop(:sync) do
+  case wait_for_module(:sync) do
+    {:ok, mod} ->
+      run_module(mod)                   # blocking
+      loop(:sync)
+
+    `{:error, :no_more_modules}` ->
+      :ok
+  end
+end
+```
+
+---
+class: padding
+
+.hidden[
+# _
+]
+
+```
+def loop(:async) do
+  case wait_for_module(:async) do
+    {:ok, mod} ->
+      spawn(fn -> run_module(mod) end)   # non-blocking
+      loop(:async)
+
+    {:error, :no_more_async_modules} ->
+      loop(:sync)
+  end
+end
+
+def loop(:sync) do
+  case wait_for_module(:sync) do
+    {:ok, mod} ->
+      run_module(mod)                   # blocking
+      loop(:sync)
+
+    {:error, :no_more_modules} ->
+      `:ok`
   end
 end
 ```
@@ -421,8 +713,8 @@ complicated than what we had before. Could we simplify this?
 ---
 class: padding
 
-.hidden[
-# _
+.center[
+# ExUnit As Parallel Map
 ]
 
 ```
