--- a/presentations/concurrency/deck.html
+++ b/presentations/concurrency/deck.html
@@ -392,6 +392,46 @@ second message is received. It'll be in the mailbox for sure, but it won't be
 received by the process because we're receiving things in specific order there.
 
 ---
+class: center, middle
+
+![](/assets/images/IMG_0210_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0211_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0212_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0213_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0214_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0219_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0220_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0221_edit.PNG)
+
+---
 class: padding
 
 .center[
@@ -859,7 +899,6 @@ def loop(:sync) do
   end
 end
 ```
-
 ---
 class: padding
 
@@ -894,6 +933,50 @@ you'll see here that we're running some modules in parallel, and others in
 sequence. We have that EventManager that seems to be really important. What we
 have here is a lot of flexibility, which is awesome. It's also far more
 complicated than what we had before. Could we simplify this?
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0223_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0224_edit.PNG)
+
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0225_edit.PNG)
+
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0226_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0227_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0228_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0229_edit.PNG)
+
+---
+class: center, middle
+
+![](/assets/images/IMG_0230_edit.PNG)
+
+-
 
 ---
 class: padding
@@ -940,7 +1023,7 @@ that originally and expanded on it over the years.
 ---
 class: padding, center, headline, middle
 
-## EventManager
+## Event Manager
 ### as (kind of) a
 ## State Machine
 
