--- a/presentations/concurrency/deck.html
+++ b/presentations/concurrency/deck.html
@@ -8,7 +8,6 @@ layout: true
 .watermark-middle[CBL Berlin 2019]
 
 ---
-
 class: center, middle, headline
 
 ## Comparing Common Concurrency Patterns
@@ -1177,3 +1176,8 @@ questions, a really elegant and natural interface for your manager just sort of
 falls into place.
 
 State machines are really nifty, ya know?!
+
+---
+class: center, middle, headline
+
+# Thank you!
