--- a/presentations/embedded/deck.html
+++ b/presentations/embedded/deck.html
@@ -2,14 +2,13 @@
 layout: presentation
 title: Embedded Application Development (for Web Developers)
 permalink: /embedded_development/
+---
+background-image: url(/assets/images/intro_Ber.png)
 
 ---
 layout: true
 .watermark-left[@devoncestes]
 .watermark-middle[GOTO Berlin 2019]
-
----
-class: center, middle, gotober-intro
 
 ---
 class: center, middle, headline
@@ -56,9 +55,7 @@ for dozens of them - not to mention drivers for dozens of possible peripherals
 - is really quite hard!
 
 ---
-class: center, middle
-
-![Tesla](/assets/images/tesla.jpg)
+background-image: url(/assets/images/tesla.jpg)
 
 ???
 This is also now software!
@@ -78,7 +75,7 @@ your battery lasts in your car.
 ---
 class: center, middle
 
-![Tesla](/assets/images/fridge-open-source-1.png)
+![](/assets/images/fridge-open-source-1.png)
 
 ???
 
@@ -88,7 +85,7 @@ the manual for a Samsung refrigerator.
 ---
 class: center, middle
 
-![Tesla](/assets/images/fridge-open-source-2.png)
+![](/assets/images/fridge-open-source-2.png)
 
 ???
 
@@ -110,11 +107,24 @@ whenever you want, a whole lot of stuff falls down in the way software is
 developed today.
 
 ---
-class: center, middle, max-img-width-940
+class: center, middle, headline
 
-# Project success
+# 📦 Shipping 📦
 
-![Linear growth](/assets/images/linear-growth.png)
+---
+class: center, middle, headline
+
+# 🎉 Success 🎉
+
+---
+class: center, middle
+
+![Linear growth](/assets/images/IMG-0237.png)
+
+---
+class: center, middle
+
+![Linear growth](/assets/images/IMG-0236.png)
 
 ???
 
@@ -132,11 +142,7 @@ This means that you need to fall back to essentially a version of waterfall, and
 in wat
 
 ---
-class: center, middle, max-img-width-940
-
-# Predicting the future!
-
-![Crystal Ball](/assets/images/crystal-ball.jpg)
+background-image: url(/assets/images/crystal-ball.jpg)
 
 ???
 
@@ -199,15 +205,13 @@ class: center, middle, headline
 ## Design Sprints
 
 ---
-class: center, middle, fullscreen-image
-
-![Design sprint](/assets/images/warehouse.gif)
-
----
 class: center, middle, headline
 
 ## KISS
 ## Keep It Simple, Stupid
+
+---
+background-image: url(/assets/images/warehouse.gif)
 
 ---
 class: center, middle, headline
@@ -277,9 +281,7 @@ class: center, middle, fullscreen-image
 ![](/assets/images/quickcheck.png)
 
 ---
-class: center, middle, fullscreen-image
-
-![](/assets/images/phone_testing.jpg)
+background-image: url(/assets/images/phone_testing.jpg)
 
 ---
 class: center, middle, headline
@@ -333,8 +335,8 @@ Limit your use of dependencies - this basically rules out JavaScript.
 ---
 class: center, middle, headline
 
-# The web?
+# The Web
 
 ---
-
-class: center, middle, gotober-outro
+layout: false
+background-image: url(/assets/images/outro_Ber.png)
