more about me stuff

--- a/presentations/grandcentrix/deck.html
+++ b/presentations/grandcentrix/deck.html
@@ -21,6 +21,36 @@ class: center, middle, headline
 ---
 class: center, middle
 
+![](/assets/images/github_profile.png)
+
+---
+class: center, middle
+
+![](/assets/images/about_me_basics.png)
+
+---
+class: center, middle
+
+![](/assets/images/maintainer.png)
+
+---
+class: center, middle
+
+![](/assets/images/contributor.png)
+
+---
+class: center, middle
+
+![](/assets/images/past_life.png)
+
+---
+class: center, middle, headline
+
+# Smartcentrix
+
+---
+class: center, middle
+
 ![](/assets/images/architecture.png)
 
 ---
